remove the interactive bg because it cause lag on mobile and doesn't behave correctly on all browser

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 @layer base
 {
     html {
-        @apply text-white;
+        @apply text-white bg-gradient-to-r from-gray-900 via-slate-900 to-gray-900;
     }
 
     .transparent-bg {
